--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,17 +1,17 @@
 <div class="tabs">
-  <div class="tab">
+  <a routerLink="bookmarks" routerLinkActive="selected" class="tab bookmarks-tab">
     <div class="tab-tile">
       <i class="material-icons-outlined">bookmarks</i>
     </div>
-  </div>
-  <div class="tab">
+  </a>
+  <a routerLink="todos" routerLinkActive="selected" class="tab todos-tab">
     <div class="tab-tile">
       <i class="material-icons-outlined">check</i>
     </div>
-  </div>
-  <div class="tab">
+  </a>
+  <a routerLink="notes" routerLinkActive="selected" class="tab notes-tab">
     <div class="tab-tile">
       <i class="material-icons-outlined">notes</i>
     </div>
-  </div>
+  </a>
 </div>
