--- a/src/app/tabs/tabs.component.scss
+++ b/src/app/tabs/tabs.component.scss
@@ -1,5 +1,87 @@
 .tabs {
   display: flex;
-  background-color: rgba(white,0.25);
+  gap: 14px;
+  background-color: rgba(white, 0.25);
+  backdrop-filter: blur(3px);
+  border-radius: 12px;
   padding: 10px;
+  margin: 12px;
+  margin-top: 50px;
+}
+.tab {
+  position: relative;
+  z-index: 1;
+  text-decoration: none;
+}
+.tab-tile {
+  display: flex;
+  padding: 18px;
+  cursor: pointer;
+  i {
+    color: #222;
+  }
+  transition: all 0.2s ease ease-out;
+}
+.tab.selected .tab-tile {
+  transform: translateY(-50%);
+  transition-duration: 0.4s;
+  transition-timing-function: cubic-bezier(0, 0, 0, 2);
+}
+// styles for the tab tile background 'shape'
+.tab-tile::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  opacity: 0.9;
+  transition: all 0.2s;
+}
+.bookmarks-tab .tab-tile::before {
+  background: linear-gradient(45deg, #f8b5a5, #e2d2fd);
+}
+.todos-tab .tab-tile::before {
+  background: linear-gradient(45deg, #a2ffff, #ffbdde);
+}
+.notes-tab .tab-tile::before {
+  background: linear-gradient(45deg, #d2cdff, #5fffbc);
+}
+.tab-tile:hover::before {
+  transform: scale(1.1);
+  opacity: 1;
+}
+.tab.selected .tab-tile::before {
+  box-shadow: 0px 7px 17px rgba(black, 0.12);
+  border-radius: 50%;
+  transform: scale(1.1);
+  opacity: 1;
+  transition-delay: 0.2s;
+}
+// end of tab tyle background 'shape 'styles
+// styles for the underline effect
+.tab::after {
+  content: '';
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  height: 3px;
+  width: 50%;
+  background-color: rgba(white, 0.85);
+  transition: all 0.2s;
+  // hide by default
+  opacity: 0;
+  transform: scaleX(0);
+}
+.tab.selected::after {
+  opacity: 1;
+  transform: scaleX(1);
+  transition-delay:0.2s ;
+}
+.tab.selected {
+  outline: none;
 }
