--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,21 @@
 @import url('https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Material+Icons+Outlined');
+
 html, body {
   height: 100%;
 }
+
 h1 {
   font-size: 48px;
 }
+
 h2 {
   font-size: 40px;
+}
+
+.container {
+  max-width: 850px;
+  //background-color: rgba(black, 0.25);
+  margin: auto;
 }
