--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,1 +1,16 @@
-<p>todos works!</p>
+<div class="todos-wrapper">
+  <div class="container">
+    <div class="todo-item completed">
+      <div class="check-box">
+        <i class="material-icons-outlined">check</i>
+      </div>
+      <p class="todo-text">This is the todo text</p>
+    </div>
+    <div class="todo-item">
+      <div class="check-box">
+        <i class="material-icons-outlined">check</i>
+      </div>
+      <p class="todo-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id ipsa officiis sed dolores. Expedita deleniti facere dicta ipsum vel pariatur, error magni voluptate ducimus veritatis numquam, suscipit et, ad excepturi!</p>
+    </div>
+  </div>
+</div>
