--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,1 +1,14 @@
-<p>notes works!</p>
+<div class="notes-wrapper">
+  <div class="container">
+    <div class="notes-list">
+      <div class="note-card">
+        <div class="note-card-title">This is the note title</div>
+        <div class="note-card-content">I am the content</div>
+      </div>
+      <div class="note-card">
+        <div class="note-card-title">Lorem ipsum</div>
+        <div class="note-card-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel sed molestias officiis nobis, voluptatibus quo? A debitis, iure, voluptatem numquam architecto tempore eligendi consectetur voluptas tempora, non veritatis sed cum!</div>
+      </div>
+    </div>
+  </div>
+</div>
