p7: add note view

--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -5,10 +5,12 @@
         <div class="note-card-title">This is the note title</div>
         <div class="note-card-content">I am the content</div>
       </div>
-      <div class="note-card">
-        <div class="note-card-title">Lorem ipsum</div>
-        <div class="note-card-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel sed molestias officiis nobis, voluptatibus quo? A debitis, iure, voluptatem numquam architecto tempore eligendi consectetur voluptas tempora, non veritatis sed cum!</div>
-      </div>
+    </div>
+    <div class="btns-container btns-centered">
+      <a routerLink="add" class="btn add-btn">
+        <i class="material-icons-outlined">add</i>
+        Add
+      </a>
     </div>
   </div>
 </div>
