--- a/src/app/add-note/add-note.component.html
+++ b/src/app/add-note/add-note.component.html
@@ -1,8 +1,8 @@
 <div class="add-note-wrapper container has-blurred-white-bg">
   <h2 class="is-bold">New note</h2>
-  <form>
-    <input class="textbox" type="text" placeholder="Enter note title...">
-    <textarea class="textarea" placeholder="Enter note content..."></textarea>
+  <form #form="ngForm" (ngSubmit)="onFormSubmit(form)">
+    <input class="textbox" ngModel name="title" type="text" placeholder="Enter note title...">
+    <textarea class="textarea" ngModel name="content" placeholder="Enter note content..."></textarea>
     <div class="btns-container">
       <a routerLink="../" class="btn">Cancel</a>
       <button class="btn align-end">Create note</button>
