--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -2,8 +2,9 @@
   <div class="container">
     <div class="notes-list">
 
-      <app-note-card *ngFor="let note of notes" [note]="note"></app-note-card>
-
+      <a *ngFor="let note of notes" [routerLink]="[note.id]" >
+        <app-note-card  [note]="note"></app-note-card>
+      </a>
     </div>
 
     <div class="btns-container btns-centered">
