--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,7 +38,6 @@ h1.is-bold, h2.is-bold {
   font-weight: 600;
   border: none;
   border-radius: 4px;
-
   cursor: pointer;
 
   &:hover {
@@ -53,6 +52,7 @@ h1.is-bold, h2.is-bold {
 
 .btns-container {
   display: flex;
+  gap:12px;
   margin-top: 20px;
 
   &.btns-centered {
@@ -68,6 +68,10 @@ h1.is-bold, h2.is-bold {
   backdrop-filter: blur(20px);
 }
 
+.form-field{
+  margin-bottom: 20px;
+}
+
 .textbox, .textarea {
   display: block;
   font-size: 18px;
@@ -76,7 +80,7 @@ h1.is-bold, h2.is-bold {
   border: 2px solid rgba(black, 0.3);
   border-radius: 4px;
   padding: 8px 10px;
-  margin-bottom: 20px;
+  //margin-bottom: 20px;
   width: 100%;
 
   &:hover, &:focus {
@@ -96,4 +100,8 @@ h1.is-bold, h2.is-bold {
 .textarea{
   resize: vertical;
   min-height: 100px;
+}
+
+a{
+  text-decoration: none;
 }
