--- a/src/app/todo-item/todo-item.component.scss
+++ b/src/app/todo-item/todo-item.component.scss
@@ -1,6 +1,6 @@
-
 .todo-item {
   display: flex;
+  position: relative;
   align-items: center;
   background-color: rgba(black, 0.5);
   border-radius: 25px;
@@ -55,4 +55,53 @@
 .todo-text,
 .check-box {
   transition: 0.2s;
+}
+
+.todo-item-actions {
+  position: absolute;
+  background: rgba(72, 72, 82, 0.85);
+  border-radius: 20px;
+  top:5px;
+  right: 5px;
+  backdrop-filter: blur(2px);
+  box-shadow: 0px 4px 12px rgba(black, 0.2);
+  transition: 0.2s;
+
+  // hide by default
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0.8);
+}
+
+.todo-item-action-btn {
+  background: transparent;
+  border-radius: inherit;
+  padding: 10px;
+
+  &:first-child {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    padding-left: 14px;
+  }
+
+  &:last-child {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    padding-right: 12px;
+  }
+
+  &:hover {
+    background: rgb(50, 50, 53);
+  }
+}
+
+.todo-item-action-btn i {
+  font-size: 20px;
+}
+
+.todo-item:hover .todo-item-actions{
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
+  transition-delay: 0.5s;
 }
