--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,7 +1,14 @@
 <div class="todos-wrapper">
   <div class="container">
 
-    <app-todo-item *ngFor="let todo of todos" [todo]="todo" (click) ="toggleCompleted(todo)"></app-todo-item>
+    <app-todo-item
+      *ngFor="let todo of todos"
+      [todo]="todo"
+      (click) ="toggleCompleted(todo)"
+      (editClick)="onEditClick(todo)"
+      (deleteClick)="onDeleteClick(todo)"
+      >
+    </app-todo-item>
 
     <div class="btns-container btns-centered">
       <a routerLink="add" class="btn add-btn">
@@ -9,12 +16,5 @@
         Add
       </a>
     </div>
-
-    <!--- <div class="todo-item">
-      <div class="check-box">
-        <i class="material-icons-outlined">check</i>
-      </div>
-      <p class="todo-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id ipsa officiis sed dolores. Expedita deleniti facere dicta ipsum vel pariatur, error magni voluptate ducimus veritatis numquam, suscipit et, ad excepturi!</p>
-    </div> -->
   </div>
 </div>
